[package]
name = "ryu-os"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-hal = { version = "0.10.2", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
fugit = "0.3.7"
panic-halt = "0.2.0"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
critical-section = "1.2.0"
embedded-alloc = "0.7.0"
wartcl = { version = "0.1.3", default-features = false }
